// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filesize component should not change 1`] = `
<div
  className="yard-block-filter--core-file__filesize"
>
  (
  100 kb
  )
</div>
`;

exports[`filesize component should not change save component of core/file 1`] = `
<div
  className="yard-block-filter--core-file"
  style={
    {
      "display": "flex",
    }
  }
>
  <div
    className="yard-block-filter--core-file__filesize"
  >
    (
    )
  </div>
</div>
`;
